backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      nodePort: 30001
      port: 3000
      targetPort: 3000
